FIx flickering bug on migration

--- a/src/components/PageHeader/index.scss
+++ b/src/components/PageHeader/index.scss
@@ -25,7 +25,7 @@
       font-size: 14px;
       color: $black_1;
       font-weight: $fontweight_medium;
-      height: 100%;
+      height: 30px;
 
       span {
         color: $system_green;
